dist/LineScript-win64-20260616/tests/cases/compile_fail/operator_override_bad_arity.lsc
operator +(a: i64) -> i64 do
  return a
end
